--- a/11 Quora REST/views/index.ejs
+++ b/11 Quora REST/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -19,12 +19,17 @@
                 <%= post.content %>
             </h4>
             <br>
-            <a href="https://localhost:8080/posts/<%= post.id %>">See in detail</a>
+            <a href="http://localhost:8080/posts/<%= post.id %>">See in detail</a>
+            <a href="http://localhost:8080/posts/<%= post.id %>/edit">Edit</a>
+            <br> <br>
+            <form method="post" action="/posts/<%= post.id %>?_method=DELETE">
+                <button>remove</button>
+            </form>
         </div>
         <% } %>
 
         <br><br>
 
-        <a href="https://localhost:8080/posts/new">Create a new post</a>
+        <a href="http://localhost:8080/posts/new">Create a new post</a>
 </body>
 </html>
